--- a/src/_misty-light-base.scss
+++ b/src/_misty-light-base.scss
@@ -17,7 +17,8 @@ html {
 body {
     font-family: "SF UI Text", "PingFang SC", -apple-system, -apple-system-body, BlinkMacSystemFont, "Segoe UI", "Microsoft YaHei", "微软雅黑", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /*font-family: -apple-system, -apple-system-body, BlinkMacSystemFont, "PingFang SC", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";*/
-    color: #24292e;
+    /*color: #24292e;*/
+    color: #000;
     line-height: 1.5;
     font-weight: 300;
 }
